<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/lightBrown"
    android:padding="15dp" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/text_main_description"
        android:layout_weight="1"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_main_welcome"
        android:textSize="30sp"
        android:layout_marginVertical="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/edit_text_main_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:backgroundTint="@color/darkBrown"
        android:hint="@string/text_hint_main_name" />

    <EditText
        android:id="@+id/edit_text_main_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginVertical="10dp"
        android:inputType="textPassword"
        android:backgroundTint="@color/darkBrown"
        android:hint="@string/text_hint_main_password" />

    <Button
        android:id="@+id/btn_main_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_main_btn"
        android:backgroundTint="@color/white"
        android:onClick="onClickBuy"
        android:paddingVertical="9dp"
        android:textSize="17sp"
        android:textColor="@color/darkBrown" />

</LinearLayout>