<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBrown"
    android:padding="15dp"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/textview_menu_hallo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_textview_menu_hallo"
        android:textSize="20sp"
        android:textColor="@color/darkBrown"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <RadioGroup
        android:id="@+id/group_tea_coffee"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/textview_menu_hallo" >

        <RadioButton
            android:id="@+id/radiobutton_menu_tea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text_radiobutton_menu_tea"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="onClickGroupTeaAndCoffee"
            app:layout_constraintRight_toRightOf="@id/radiobutton_menu_coffee"
            app:layout_constraintLeft_toLeftOf="parent" />

        <RadioButton
            android:id="@+id/radiobutton_menu_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_radiobutton_menu_coffee"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:onClick="onClickGroupTeaAndCoffee"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/radiobutton_menu_tea" />

    </RadioGroup>

    <View
        android:id="@+id/view_menu_line_in_welcome"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@color/darkBrown"
        app:layout_constraintTop_toBottomOf="@id/group_tea_coffee"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/radiobutton_menu_dop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/group_tea_coffee"
        android:text="@string/text_textview_menu_what"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:textSize="20sp"
        android:textColor="@color/darkBrown" />

    <RadioGroup
        android:id="@+id/group_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/radiobutton_menu_dop">

        <CheckBox
            android:id="@+id/checkbox_milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/text_checkbox_menu_milk" />

        <CheckBox
            android:id="@+id/checkbox_sugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/text_checkbox_menu_sugar" />

        <CheckBox
            android:id="@+id/checkbox_lemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/text_checkbox_menu_lemon" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/group_checkbox"
        android:background="@color/darkBrown" />

    <TextView
        android:id="@+id/textview_item_drink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_textview_menu_type_drink"
        app:layout_constraintTop_toBottomOf="@id/group_checkbox"
        android:paddingTop="15dp"
        android:gravity="center_horizontal"
        android:textColor="@color/darkBrown"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_menu_type_drink"
        android:theme="@style/Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/type_drink_coffee"
        app:layout_constraintTop_toBottomOf="@id/textview_item_drink"
        android:popupBackground="@color/darkBrown" />

    <ImageView
        android:id="@+id/button_menu_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button"
        android:onClick="onClickSendOrder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>